--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.application.name=bug-tracker
+server.port=9090
 
+spring.data.mongodb.uri=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
+spring.data.mongodb.database=bug_tracker
