Mostly completed backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=bug-tracker
-server.port=9090
+server.port=9091
+
+spring.thymeleaf.cache=false
 
 spring.data.mongodb.uri=mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false
 spring.data.mongodb.database=bug_tracker
